GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 8.26 (2016-11-30) [stable]

** Bug fixes

  cp, mv, and install no longer run into undefined behavior when
  handling ACLs on Cygwin and Solaris platforms. [bug introduced in
  coreutils-8.24]

  cp --parents --no-preserve=mode, no longer copies permissions from source
  directories, instead using default permissions for created directories.
  [bug introduced in coreutils-5.93]

  chcon, chgrp, chmod, chown, du, and rm, or specifically utilities
  using the FTS interface, now diagnose failures returned by readdir().
  [this bug was inherent in the use of fts: thus, for rm the bug was
  introduced in coreutils-8.0.  du, chmod, chgrp and chown started using
  fts in 6.0.  chcon was added in coreutils-6.9.91 with fts support.  ]

  date, du, ls, and pr no longer mishandle time zone abbreviations on
  System V style platforms where this information is available only
  in the global variable 'tzname'. [bug introduced in coreutils-8.24]

  factor again outputs immediately when numbers are input interactively.
  [bug introduced in coreutils-8.24]

  head no longer tries to process non-seekable input as seekable,
  which resulted in failures on FreeBSD 11 at least.
  [bug introduced in coreutils-8.24]

  install -DZ and mkdir -pZ now set default SELinux context correctly even if
  two or more directories nested in each other are created and each of them
  defaults to a different SELinux context.

  ls --time-style no longer mishandles '%%b' in formats.
  [bug introduced in coreutils-7.2]

  md5sum --check --ignore-missing no longer treats files with checksums
  starting with "00" as missing.  This also affects sha*sum.
  [bug introduced with the --ignore-missing feature in coreutils-8.25]

  nl now resets numbering for each page section rather than just for each page.
  [This bug was present in "the beginning".]
