@@ -73,6 +73,11 @@ my @Tests =
      ['bug-2012-c', '6635692801', {OUT => '57601 115201'}],
      ['bug-2012-d', '17709149503', {OUT => '94099 188197'}],
      ['bug-2012-e', '17754345703', {OUT => '94219 188437'}],
+     # Infinite loop bugs in v8.20 to 8.26 inclusive
+     ['bug-2016-a', '158909489063877810457',
+      {OUT => '3401347 3861211 12099721'}],
+     ['bug-2016-b', '222087527029934481871',
+      {OUT => '15601 26449 111427 4830277'}],
     );
 
 # If we have GMP support, append tests to exercise it.
